k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: embedding-model-deployment
  namespace: semantic-search
  labels:
    app: embedding-model
spec:
  selector:
    matchLabels:
      app: embedding-model
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: embedding-model
    spec:
      containers:
      - name: embedding-model
        image: us-central1-docker.pkg.dev/queryable-docs-dev/queryable-docs-docker-repository/semantic-search-embedding-model:latest
        # image: semantic-search-embedding-model:latest
        # imagePullPolicy: Never
        ports:
        - containerPort: 8090
