k8s/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: embedding-model-ingress
  namespace: semantic-search
spec:
  rules:
  -  http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: embedding-model-service
            port:
              number: 80
